[package]
name = "dtg-credentials"
description = "Decentralized Trust Graph (DTG) Credentials Library"
version = "0.1.0"
edition = "2024"
publish = false
authors = ["Glenn Gore <glenn@affinidi.com>"]
rust-version = "1.88.0"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/FirstPersonNetwork/tdg-credentials-rs"

[dependencies]
